Clean up html and fix resizing on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,149 +1,202 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300);
-html {
-    padding: 0;
+
+body, html {
     margin: 0;
-    font-family: lato;
-    background-color: transparent;
-    background-size: cover
+    padding: 0;
 }
 
-body {
-    margin: 0px;
-    padding: 0px;
+.col-md-6 {
+    padding: 0;
+}
+
+.front-background {
+    overflow-y: hidden;
+    height: 100vh;
     background: black;
-    background-image: url('../img/background/sky1.png')!important;
+    background-image: url('../img/background/sky1.png');
     background-size: cover;
-    background-position: center;
+}
+
+.stretch-column {
+    height: 100vh;
+}
+
+.front-divider {
+    border: 0.1vh solid light-grey;
+    height: 0vh;
+    margin: 2vh 0;
+}
+
+.front-links {
+    margin-left: 3vh;
+    margin-right: 3vh;
+}
+
+.front-link:hover {
+    text-decoration: none;
+    color: black;
+}
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+  
+.circle-image img {
+    width: 100%;
+    height: 100%;
+    opacity: 0.95;
+    object-fit: cover;
+}
+
+@media (min-width: 992px) {
+    .front-name {
+        width: 100%;
+        font-weight: 700;
+        justify-content: center;
+        text-align: center;
+        white-space: nowrap;
+        font-size: 3.5vw;
+        overflow: hidden;
+    }
+    .front-title {
+        width: 100%;
+        font-weight: 400;
+        justify-content: center;
+        text-align: center;
+        white-space: nowrap;
+        font-size: 2vw;
+        overflow: hidden;
+    }
+    .front-link {
+        justify-content: center;
+        text-align: center;
+        font-size: 1.3vw;
+        font-weight: 400;
+        width: 33.33%;
+        color: rgb(150, 150, 150);
+    }
+    .front-info-box-content {
+        margin: 2.5vh;
+    }
+    .centered-box {
+        position: relative;
+        top: 50%;
+        left: 10vw;
+        transform: translate(0%, -50%);
+    }
+    .front-info-box {
+        width: 80%;
+        opacity: 0.9;
+        background-color: white;
+        border-radius: 1vh;
+        border: 2vh black solid;
+    }
+    .circle-image {
+        border-radius: 50%;
+        overflow: hidden;
+        width: 35vw;
+        height: 35vw;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: black;
+        border: 2vh solid black;
+    }
+    .centered-circle {
+        position: relative;
+        top: 50vh;
+        left: 5%;
+        justify-content: center;
+        transform: translate(0%, -50%);
+    }
+}
+
+@media (max-width: 991.98px) {
+    .front-name {
+        width: 100%;
+        font-weight: 700;
+        justify-content: center;
+        text-align: center;
+        white-space: nowrap;
+        font-size: 6.5vh;
+        overflow: hidden;
+    }
+    .front-title {
+        width: 100%;
+        font-weight: 400;
+        justify-content: center;
+        text-align: center;
+        white-space: nowrap;
+        font-size: 4vh;
+        overflow: hidden;
+    }
+    .front-link {
+        justify-content: center;
+        text-align: center;
+        font-size: 3vh;
+        font-weight: 400;
+        width: 33.33%;
+        color: rgb(150, 150, 150);
+    }
+    .front-info-box-content {
+        margin: 3vh;
+    }
+    .centered-box {
+        position: relative;
+        top: 13%;
+        left: 50%;
+        transform: translate(-50%, -20%);
+    }
+    .front-info-box {
+        /*height: 35%;*/
+        width: 55vh;
+        opacity: 0.9;
+        background-color: white;
+        border-radius: 1vh;
+        border: 2vh black solid;
+    }
+    .circle-image {
+        border-radius: 50%;
+        overflow: hidden;
+        width: 50vh;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: black;
+        border: 2vh solid black;
+    }
+    .centered-circle {
+        position: relative;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -20%);
+    }
 }
 
 .invert {
     filter: invert(100%);
 }
 
-.main-content {
-    position: relative;
-    z-index: 30;
-    margin: 5% 15%;
-}
-
-.main-content .info-table {
-    display: table;
-}
-
-.main-content .info-box {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.main-content .info-box .background .info-content {
-    margin: 3vh;
-}
-
-.main-content .info-box .background {
-    background-color: white;
-    opacity: 0.9;
-    border-radius: 1vh;
-    border: 2vh black solid;
-    padding: 1vh;
-}
-
-.info-content .links {
-    padding-top: 1vh;
-}
-
-.main-content .profile {
-    opacity: 0.95;
-    float: right;
-    position: relative;
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
-}
-
-.main-content .profile .rounded-circle {
-    background-color: black;
-    border: 2vh solid black;
-}
-
-.main-content .name {
-    font-size: 7vh;
-    font-weight: 700;
-}
-
-.main-content .profession {
-    font-size: 3.5vh;
-    font-weight: 400;
-}
-
-.main-content .info-item {
-    font-size: 3vh;
-    font-weight: 400;
-    margin-right: 3vh;
-    color: rgb(150, 150, 150);
-}
-
-.main-content .info-item:hover {
-    color: black;
-}
-
-@media screen and (max-width: 767px) {
-    .main-content .info-table {
-        margin-bottom: 5vh;
-    }
-}
-
 .projects-background {
-    background-image: none!important;
-    background-color: black!important;
-    /* background-image: url("../img/background/sky2.png")!important; */
+    background-image: none;
+    /* background-color: #282828; */
+    background-image: url("../img/background/sky2.png")!important;
     background-position: top left;
     background-size: cover;
     margin: 0px;
     padding: 0px;
 }
 
-.text-wrapper {
-    animation-delay: 0s;
-    animation-duration: 2s;
-    display: table-cell;
-    width: 100%;
-    height: 100%;
-    vertical-align: middle;
-    text-align: center;
-}
-
-.container::after,
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.noselect {
-    -webkit-touch-callout: none;
-    /* iOS Safari */
-    -webkit-user-select: none;
-    /* Safari */
-    -khtml-user-select: none;
-    /* Konqueror HTML */
-    -moz-user-select: none;
-    /* Old versions of Firefox */
-    -ms-user-select: none;
-    /* Internet Explorer/Edge */
-    user-select: none;
-    /* Non-prefixed version, currently
-                                  supported by Chrome, Opera and Firefox */
-}
-
-a:hover {
-    text-decoration: none!important;
-}
-
 .card {
     border: none;
-    background-color: transparent!important;
-    /* background-color: #000; */
-    /* border: 7px solid #444; */
+    background-color:  black;
+    border: 7px solid black;
 }
 
 .card-title {
@@ -157,9 +210,8 @@ a:hover {
 
 .card-footer {
     background-color: #000;
-    border-left: 5px solid #282828;
-    border-right: 5px solid #282828;
-    border-bottom: 5px solid #282828;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
     border-top: none;
 }
 
@@ -218,6 +270,7 @@ a {
 
 a:hover {
     color: #ab6a1a;
+    text-decoration: none;
 }
 
 .carousel-inner {
